study ADP Part4

--- a/ADP_Part4/1장_데이터 처리 기술의 이해.md
+++ b/ADP_Part4/1장_데이터 처리 기술의 이해.md
@@ -125,25 +125,106 @@
 #### 나. Federation(inter-communication)
     - Request / reply Model
 ### 5. EAI 활용 효과
+    - 분리되어 있는 정보 시스템들 간의 데이터 동기화
+    - 데이터 표준화 기반 제공
+### 6. EAI와 ESB의 비교
 |구분|EAI(Enterprise Application Integration|ESB(Enterprise Service Bus)|
 |:--:|:--:|:--:|
 |기능|미들웨어(Hub)를 이용하여 비즈니스 로직을 중심으로 Application을 통합, 연계|미들웨어(Bus)를 이용하여 서비스 중심으로 시스템을 유기적으로 연계|
 |통합관점|Application|Process|
 |로직연동|개별 Application에서 수행|ESB에서 수행|
 |아케텍처|단일 접점인 허브시스템을 이용한 중앙집중식 연결구조|버스(Bus) 형태의 느슨하고 유연한 연결구조|
-### 6. EAI와 ESB의 비교
+<br/>
+
 ## 4절. 데이터 통합 및 연계 기법
 ### 1. 데이터 연계 및 통합 유형(동기화 기준)
+    - 실시간 통합시에는 관심 대상 영역 상태에 대한 빠른 파악 및 대응이 가능하다는 장점이 있다.
+<데이터 연계 및 통합 아키텍처 비교>
+|일괄(Batch)통합|비동기식 실시간 통합|동기식 실시간 통합|
+|:--|:--|:--|
+|- 비실시간 데이터 통합<br/>- 대용량 데이터 대상<br/>- 높은 데이터 조작 복잡성<br/>- ETL<br/>- CDC<br/>- 감사 증적<br/>- 웹서비스/SOA<br/>- 교차 참조<br/>- 데이터 재처리 허용<br/>- 점대점 데이터 연계<br/>- 자동화 도구 및 자체 개발 SW 혼용|- 근접 실시간 데이터 통합<br/>- 중간 용량 데이터<br/>- 중간 데이터 조작 복잡성<br/>- ETL<br/>- CDC<br/>- Data pooling and DB Streams<br/>- 웹서비스/SOA<br/>- 감사 증적<br/>- 교차 참조<br/>- 다수 데이터 원천 및 목표 시스템<br/>- 데이터 재처리 허용<br/>- 자동화 도구 및 자체 개발 SW 혼용|- 실시간 데이터 통합<br/>- 목표 시스템 데이터 처리 가능시에만 원천 데이터 획득<br/>- ETL<br/>- 웹서비스/SOA<br/>- Single transaction integration<br/>- 단일 트랜잭션 단위 데이터 통합<br/>- 데이터 재처리 불가<br/>- 단일 또는 다수 데이터 원천<br/>- 감사 증적|
+<br/>
+
+<데이터 처리 기법 비교>
+|구분|전통적 데이터 처리 기법|빅데이터 처리 기법|비고|
+|:--:|:--:|:--:|:--:|
+|추출|- 운영 DB -> ODS<br/>- ODS -> 데이터 웨어하우스|- 빅데이터 환경 -> 빅데이터 환경|특정 소스에서 타깃으로 데이터를 옮긴다는 측면은 동일|
+|변환|O|O||
+|로딩|O|O||
+|시각화|X|O|시각화를 통해 대용량 데이터에서 통찰력을 획득하고자 하는 시도는 빅데이터의 고유한 특성|
+|분석|- OLAP<br/>- 통계와 데이터마이닝 기술|- 통계와 데이터마이닝 기술|각종 통계 도구, 기법과 데이터 마이닝의 분석 모델 설계, 운영, 개선 기법의 적용은 유사함|
+|리포팅|비즈니스 인텔리전스|비즈니스 인텔리전스||
+|인프라스트럭처|- SQL<br/>- 전통적 RDBS 인스턴스|- NoSQL 등<br/>- 초대형 분산 데이터 스토리지|전통적 데이터 저장 메커니즘 대비 다수의 노드에 중복을 허용하는 방식으로 데이터를 저장하는 것은 빅데이터의 고유한 특성임|
+<br/>
+
 ## 5절. 대용량의 비정형 데이터 처리방법
 ### 1. 대용량 로그 데이터 수집
 #### 가. 로그(log)
+    - 아파치 Flume-NG, 페이스북 Scribe, 아파치 Chukwa 등
 #### 나. 대용량 비정형 데이터 수집 시스템의 특징
+##### 1) 초고속 수집 성능과 확장성
+    - 쉽게 확장할 수 있는 구조를 가진다
+##### 2) 데이터 전송 보장 메커니즘
+    - 분산 파일시스템, DB, NoSQL 등에 저장
+    - 데이터 전송 안정성 수준을 제어할 수 있다.
+    - 성능과 안정성이라는 트레이드 오프가 존재
+##### 3) 다양한 수집과 저장 플러그인
+##### 4) 인터페이스 상속을 통한 애플리케이션 기능 확장
 ### 2. 대규모 분산 병렬 처리
 #### 가. 하둡(Hadoop)
+    - 맵리듀스시스템과 분산 파일시스템인 HDFS를 핵심 구성 요소로 가지는 플랫폼 기술
+    - 여러대의 컴퓨터를 마치 하나의 시스템인 것 처럼 묶은 자바 기반의 오픈소스 프레임워크
+    - 비공유 분산 아키텍처를 사용
 #### 나. 하둡(Hadoop)의 특징
+##### 1) 선형적인 성능과 용량 확장
+    - 비공유 분산 아키텍처 시스템 -> 서버를 추가하면 연산 기능과 저장 기능이 서버의 대수에 비례해 증가
+##### 2) 고장 감내성
+    - 데이터는 3중 복제
+    - 맵리듀스 작업 수행 중 특정 테스크에서 장애가 생기면, 시스템이 자동으로 감지해 장애가 발생한 특정 태스크만 다른 서버에서 재실행 할 수 있다.
+##### 3) 핵심 비즈니스 로직에 집중
+    - 하둡의 맵리듀스는 맵과 리듀스라는 2개의 함수만 구현
+##### 4) 풍부한 에코시스템 형성
+    - Zookeeper : 분산 환경에서 서버들간에 상호 조정이 필요한 다양한 서비스 제공
+    - Oozie : 하둡 작업을 관리하는 워크플로우 및 코디네이터 시스템
+    - Hbase : HDFS 기반의 컬럼 NoSQL
+    - Pig : 복잡한 MapReduce 프로그래밍을 대체할 Pig Latin 언어 제공
+    - Hive : 하둡 기반의 데이터웨어하우스, 테이블 단위의 데이터 저장과 SQL 쿼리를 지원
+    - Mahout : 하둡 기반으로 데이터 마이닝 알고리즘을 구현한 오픈 소스 라이브러리
+    - Hcatalog : 하둡 기반의 테이블 및 스토리지 관리
+    - Avro : RPC(Remote Procedure Call)과 데이터 직렬화를 지원하는 프레임워크
+    - Chukwa : 분산 환경에서 생성되는 데이터를 HDFS에 안정적으로 저장시키는 플랫폼
+    - Flume : 소스서버에 에이전트가 설치되고, 에이전트로부터 데이터를 전달받는 콜랙터로 구성
+    - Scribe : 페이스북에서 개발된 데이터 수집 플랫폼으로 Chukwa와 달리 중앙집중서버로 전송
+    - Sqoop : 대용량 데이터 전송 솔루션이며, HDFS, RDBMS, DW, NoSQL 등 다양한 저장소에 대용량 데이터를 신속하게 전송할 수 있는 방법 제공
+    - Hiho : Sqoop과 같은 대용량 데이터 전송 솔루션으로 하둡에서 데이터를 가져오기 위한 SQL을 지정할 수 있으며, JDBC 인터페이스를 지원
+    - YARN은 맵리듀스의 단점을 극복하기 위해 시작되어 분산 애플리케이션을 구현하기 위한 자원 관리 프레임워크를 지원
+    - Flume-NG는 데이터가 발생하는 애플리케이션 단계, 발생한 데이터를 수집하는 단계, 수집한 데이터를 저장하는 단계, 데이터 저장소 보관 단계로 이루어짐
+<하둡 에코 시스템의 구성>
+|구분|주요기술|구분|주요기술|
+|:--:|:--:|:--:|:--:|
+|데이터 수집|Flume_NG, kafka|대용량 SQL 질의|Hive, Pig|
+|데이터 연동|Sqoop|실시간 SQL 질의|Impala, Tajo|
+|분산 데이터베이스|Hbase|워크플로우 관리|Oozie, Azkaban|
+<br/>
+
 ### 3. 데이터 연동
 #### 가. 데이터 연동의 개요
+    - 정형 데이터와 분석하고자 하는 비정형 데이터를 연동하는 것이 필요
+    - 데이터베이스의 데이터를 하둡으로 복사한 후 하둡에서 대규모 분산 처리를 수행
+    - 생성된 작은 요약 데이터셋을 다시 데이터베이스에 기록하는 방식
+    - 데이터 연동 기능을 수행하는 대표적인 오픈 소스 솔루션이 스쿱(Sqoop)
 #### 나. 스쿱(Sqoop)
-### 4. 데용량 질의 기술
+    - 하둡과 데이터베이스간의 데이터 연동 솔루션인 스쿱은 대부분의 관계형 데이터베이스와의 연동을 지원
+    - Hbase와 같은 일부 NoSQL 데이터베이스와도 연동이 가능
+### 4. 대용량 질의 기술
 #### 가. 대용량 질의 기술의 개요
+    - SQL 질의기술을 이용해 하둡에 저장된 데이터를 쉽게 처리하고 분석할 수 있도록 해주는 '하이브(Hive)가 등장
+    - 실시간 조회 및 처리에 대한 제약을 극복하기 위해 실시간 SQL 질의 분석 기술인 SQL on 하둡이 등장
 #### 나. SQL on 하둡 기술
+    - 아파치 드릴
+    - 아파치 스팅거
+    - 샤크
+    - 아파치 타조 : 고려대 대학원에서 시작된 프로젝트로 국내 빅데이터 전문회사인 그루터가 합류하여 개발을 진행하고 있고, 아파치 인큐베이션 프로젝트로 등록되어 있음
+    - 임팔라
+    - 호크
+    - 프레스토 : 페이스북에서 자체적으로 개발하여 사용하고 있는 하둡 기반의 데이터웨어 하우징엔진, 아파치 라이선스로 공개
