--- a/ADP_Part4/2장_데이터 처리 프로세스.md
+++ b/ADP_Part4/2장_데이터 처리 프로세스.md
@@ -124,23 +124,160 @@
 |단점|각 노드에 장애가 발생할 경우를 대비해 별도의 폴트톨러런스를 구성해야 한다|
 
 ##### 2) 공유 디스크
+    - 공유 디스크 클러스터에서 데이터 파일은 논리적으로 모든 데이터베이스 인스턴스 노드들은 데이터 파일을 논리적으로 공유하며, 각 인스턴스는 모든 데이터에 접근할 수 있다.
+    - 데이터를 공유하려면 SAN(Storage Area Network)과 같은 네트워크가 반드시 있어야 한다
+    - 모든 노드가 데이터를 수정할 수 있기 때문에 노드간의 동기화 작업 수행을 위한 별도의 커뮤니케이션 채널이 필요하다
+|||
+|:--:|:--|
+|장점|높은 수준의 폴트톨러런스를 제공하므로 클러스터를 구성하는 노드 중 하나의 노드만 살아 있어도 서비스가 가능하다 |
+|단점|클러스터가 커지면 디스크 영역에서 병목현상이 발생|
 #### 라. 데이터베이스 클러스터의 종류
 ##### 1) Oracle RAC 데이터베이스 서버
+    - 공유 클러스터
+    - 클러스터의 모든 노드에서 실행되며 데이터는 공유 스토리지에 저장
+    - 특정 노드가 데이터를 소유하는 개념이 없다
+    - 파티셔닝 필요 없다. 하지만, 성능향상을 위해 파티셔닝하는 경우 빈번
+    - 응용 프로그램은 클러스터의 특정 노드가 아니라 RAC 클러스터에 연결
+    - RAC는 클러스터의 모든 노드에 로드를 고르게 분산
+<Oracle RAC 데이터베이스 서버의 장점>
+|||
+|:--:|:--|
+|가용성|높은 수준의 폴트톨러런스를 제공하므로 클러스터를 구성하는 노드 중 하나의 노드만 살아 있어도 서비스가 가능하다|
+|확장성|새 노드를 클러스터에 쉽게 추가할 수 있다.|
+|비용 절감|예를들어 4CPU 16노드 클러스터를 사용하면 동급 성능의 64CPU SMP 시스템에 비해 비용을 크게 절감할 수 있다|
+
 ##### 2) IBM DB2 ICE(Integrated Cluster Environment)
+    - CPU, 메모리, 디스크를 파티션별로 독립적으로 운영하는 무공유 방식의 클러스터링을 지원
+    - 애플리케이션은 여러 파티션에 분산된 데이터베이스를 하나의 데이터베이스로 보게 되고, 데이터가 어느 파티션에 존재하고 있는지 알 필요가 없다.
+    - 데이터와 사용자가 증가하면 애플리케이션의 수정없이 기존 시스템에 노드를 추가하고 데이터를 재분배함으로써 시스템의 성능과 용량을 일정하게 유지할 수 있다.
+    - 각 노드로 분산되는 파티셔닝을 어떻게 구성하느냐에 따라 성능의 차이가 많이 발생할 수 있다.
+    - 하나의 노드에 장애가 발생할 경우, 해당 노드에서 서비스하는 데이터에 대한 별도의 failover 메커니즘이 필요
+    - DB2를 이용하여 클러스터링을 구성할 떄는 공유디스크 방식을 사용하여 가용성 보장
 ##### 3) 마이크로소프트 SQL Server
+    - SQL Server는 연합 데이터베이스 형태로 여러 노드로 확장할 수 있는 기능을 제공
+    - 연합 데이터베이스는 디스크 등을 공유하지 않는 독립된 서버에서 실행되는 서로 다른 데이터베이스들 간의 논리적인 결합이며, 네트워크를 이용하여 연결된다
+    - 데이터는 관련된 서버들로 수평 분할되며, 테이블을 논리적으로 분리해 물리적으로는 분산된 각 노드에 생성한다
+    - 각 노드의 데이터베이스 인스턴스 사이에 링크를 구성한 후 모든 파티션에 대해 UNION ALL을 이용해 논리적인 뷰를 구성하는 방식
+    - 분산된 환경의 데이터에 대한 싱글 뷰를 제공
+    - SQL Server에서는 이런 뷰를 DPV(Distributed Partitioned View)라고 한다
+    - 마이크로소프트 SQL Server 구성의 문제점
+        - DBA나 개발자가 파티셔닝 정책에 맞게 테이블과 뷰를 생성해야한다
+        - 전역 스키마 정보가 없기 때문에 질의 수행을 위해 모든 노드를 액세스 해야 한다
+        - 노드가 많아지거나 노드의 추가/삭제가 발생하는 경우 파티션을 새로 구성해야 한다. 또한 페일오버에 대해서는 별도로 구성해야 한다
+    - SQL Server에서도 페일오버 메커니즘을 제공하지만, Active-Active가 아닌 Active-Standby 방법을 사용하고 있다
 ##### 4) MySQL
+###### 가) 개념 및 특징
+    - MySQL 클러스터는 비공유항으로서 메모리 기반 데이터베이스의 클러스터링을 지원
+    - 병렬 서버구조로 확장이 가능
+    - 관리노드, 데이터노드, MySQL 노드로 구성
+|||
+|:--:|:--|
+|관리노드|클러스터를 관리하는 노드로 클러스터 시작과 재구성 시에만 관여|
+|데이터노드|클러스터의 데이터를 저장하는 노드|
+|MySQL|클러스터 데이터에 접근을 지원하는 노드|
+    - 데이터의 가용성을 높이기 위해 데이터를 다른 노드에 복제시키며, 특정 노드에 장애가 발생하더라도 지속적인 데이터 서비스가 가능하다
+    - 장애가 발생했던 노드가 복구되어 클러스터에 투입된 경우에도 기존 데이터와 변경돈 데이터에 대한 동기화 작업이 자동으로 수행
+    - 데이터는 동기화 방식으로 복제되며, 이런 작업을 위해 일반적으로 데이터 노드 간에는 별도의 네트워크를 구성
+    - MySQL의 최근 버전에서는 디스크 기반의 클러스터링을 제공한다.
+    - 디스크 기반 클러스터링에서는 인덱스가 생성된 칼럼은 기존과 동일하게 메모리에 유지되지만, 인덱스를 생성하지 않은 칼럼은 디스크에 저장된다
+###### 나) MySQL 클러스터 구성을 할 경우의 제한 사항
+    - 파티셔닝은 LINEAR KEY 파티셔닝만 가능
+    - 클러스터에 참여하는 노드(SQL 노드, 데이터노드, 매니저를 포함) 수는 255로 제한
+    - 데이터 노드는 최대 48개까지만 가능
+    - 트랜잭션 수행 중에 롤백을 지원하지 않으므로 작업 수행 중에 문제가 발생하였다면, 전체 트랜잭션 이전으로 롤백해야 한다
+    - 하나의 트랜잭션에 많은 데이터를 처리하는 경우 메모리 부족 문제가 발생할 수 있으며 여러 개의 트랜잭션으로 분리해 처리하는 것이 좋다
+    - 칼럼명의 길이는 31자, 데이터베이스의 테이블명 길이는 122자까지로 제한된다. 데이터 베이스 테이블, 시스템 테이블, 블롭 인덱스를 포함한 메타데이터는 2만 320개까지만 가능
+    - 클러스터에서 생성할 수 있는 테이블 수는 최대 2만 320개
+    - 한 로우의 크기는 8KB
+    - 데이블의 키는 32개가 최대
+    - 모든 클러스터의 기종은 동일해야 한다
+    - 운영 중에 노드를 추가/삭제할 수 없다.
+    - 디스크 기반 클러스터인 경우 tablespace의 개수는 2^32, tablespace당 데이터 파일의 개수는 2^16 데이터 파일의 크기는 32GB까지 가능
+
+
 <hr>
 
 ### 3. NoSQL
 #### 가. NoSQL의 개념 및 특징
+    - 분산 데이터베이스 기술
+    - 비관계형 데이터베이스 관리 시스템, SQL 계열 쿼리 언어 사용 가능
+    - Not Only SQL이라고도 함
+    - Key-value 모델, Document 모델(Jason 혹은 XML 데이터), Graph 모델, Column 모델
+    - NoSQL은 key와 value의 형태로 자료를 저장하고, 빠르게 조회할 수 있는 자료 구조를 제공하는 데이터 저장소이다
+    - 스키마 없이 동작하며, 구조에 대한 정의 변경 없이 자유롭게 데이터베이스의 레코드에 필드를 추가할 수 있따
+    - 전통적인 RDBMS의 장점이라고 할 수 있는 복잡한 Join 연산 기능은 지원하지 않지만 대용량 데이터 처리와 대규모의 수평적 확장성을 제공한다
+    - NoSQL은 대부분이 오픈소소
+    - 구글 빅테이블, 아파치 HBase, 아마존 SimpleDB, 마이크로소프트 SSDS 등이 있다
 #### 나. 구글 빅테이블
-##### 1) 개념 및 특징
+##### 1) 개념 및 특징    
+    - 공유 디스크 방식
+    - 모든 노드가 데이터, 인덱스 파일을 공유
+    - 실시간 서비스뿐만 아니라 주기적인 배치 작업과 대용량 데이터의 분석 처리에도 적합하도록 구성
+    - 빅테이블과 유사한 솔루션으로는 아파치 오픈소스 프로젝트인 HBase와 NHN가 개발한 Neptune이 있다
 ##### 2) 데이터 모델
+    - 빅테이블은 multi-dimension sorted hash map을 파티션하여 분산 저장하는 저장소다.
+    - 테이블 내의 모든 데이터는 row-key의 사전적 순서로 정렬, 저장
+    - 테이블의 파티션은 row-key를 이용하여 이루어지고, Tablet이라고 불리는 분리된 파티션은 분산된 노드에서 서비스된다. 한 Tablet의 크기는 보통 100~200MB
+    - row는 n개의 column-family를 가질 수 있으며 column-family에는 column-key, value, time stamp의 형태로 데이터를 저장한다.
+    - 하나의 row-key, column-family내에 저장되는 데이터는 column-key의 사전적 순서로 정렬되어 있다.
+    - 동일한 column-key에 대해 타임스탬프가 다른 여러 버전의 값이 존재할 수 있으며, 타임스탬프는 칼럼 값의 버전을 관리하기 위해 사용된다
+    - BigTable에 저장되는 하나의 데이터의 키 값 또는 정렬 기준은 'rowkey + column-key + timestamp'이다
 ##### 3) 페일오버
+    - 특정 노드에 장애가 발생할 경우, 빅테이블의 마스터는 장애가 발생한 노드에서 서비스되던 Tablet을 다른 노드로 재할당시킨다.
+    - 재할당 받은 노드는 구글 파일 시스템에 저장도니 변경 로그 파일, 인덱스 파일, 데이터 파일 등을 이용해 데이터 서비스를 위한 초기화 작업을 수행한 후 다시 데이터 서비스를 한다
+    - 빅테이블의 SPOF(Single Point Of Failure, 시스템의 구성 요소 중 동작하지 않으면 전체 시스템이 중단되는 요소)는 마스터
+    - 분산 락 서비스를 제공하는 Chubby를 이용해 Master를 계속 모니터링 하다가 마스터에 장애가 발생하면 가용한 노드가 마스터 역할을 수행하도록 한다
+    - Chubby는 폴트톨러런스 지원 구조이기 때문에 절대로 장애가 발생하지 않는다
+
+![구글빅테이블](./구글빅테이블.jpg)
+
 ##### 4) AppEngine
+    - AppEngine은 구글 클라우드 플랫폼의 일부로 빅테이블을 사용한다
+    - 사용자에게 직접 빅테이블의 API를 공개하지 않고 추상 계층을 두고 있는데, API뿐만 아니라 데이터 모델도 추상화되어 있다
+    - 사용자 테이블을 생성할 경우, 빅테이블의 테이블로 생성되는 것이 아니라 빅테이블의 특정 테이블에 대한 한 영역만을 차지하게 된다
+    - 빅테이블에서는 별도의 사용자 정의 인덱스를 제공하지 않는 반면, AppEngine에서는 사용자가 수행하는 쿼리를 분석하여 자동으로 인덱스를 생성해 준다
+    - AppEngine에서 생성한 인덱스도 빅테이블의 특정 테이블 또는 테이블 내의 컬럼으로 저장된다
 #### 다. Hbase
+    - 하둡 분산 파일 시스템을 기반으로 구현된 컬럼 기반의 분산 데이터베이스
+    - HBase는 관계형 구조가 아니며, SQL을 지원하지 않는다
+    - 구조화된 데이터보다는 비구조화된 데이터에 더 적합
+    - 선형 확장이 가능
+    - 수평적으로 확장성이 있어 큰 테이블에 적합하며, 단일행의 트랜잭션을 보장한다
+    - 로우키에 대한 인덱싱만을 지원, Zookeeper를 이용한 고가용성 보장
+    
 #### 라. 아마존 SimpleDB
+    - SimpleDB는 아마존의 데이터 서비스 플랫폼으로, 웹 애플리케이션에서 사용하는 데이터의 실시간 처리를 지원한다
+    - SimpleDB는 주로 아마존의 다른 플랫폼 서비스와 같이 사용
+    - EC2, S3등과 같은 아마존의 내부 서비스 간 네트워크 트래픽 무료, 외부와의 In/Out 트래픽에는 요금 부과
+    - 사용자는 EC2에서 수행되는 웹 서버로 접근하고, 웹 서버에서 SimpleDB의 데이터를 조회해 적절하게 가공한 후 사용자에게 제공하는 형태로 구성
+    - 비용을 염두에 두지 않은 경우라면 외부에서 직접 SimpleDB에 접근해 사용하는 것도 가능
+    - SimpleDB는 하나의 데이터에 대해 여러 개의 복제본을 유지하는 방식으로 가용성을 높이며, 트랜잭션 종료 후 데이터가 모든 노드에 즉시 반영도지 않고 초 단위로 지연 동기화되는 'Eventual Consistency' 정책을 취한다
+    - 관계형 데이터 모델과 표준 SQL을 지원하지 않으며, 전용 쿼리 언어를 이용
+    - SimpleDB의 데이터 모델은 'Domain, Item, Attribute, Value로 구성되며 스키마가 없는 구조이다
+|||
+|:--:|:--|
+|도메인|- 관계형 데이터베이스의 테이블과 동일한 개념<br/>- 도메인에는 최대 10GB의 데이터를 저장할 수 있으며, 사용자는 100개의 도메인을 가질 수 있음<br/>- 사용자는 최대 1,000GB의 데이터를 SimpleDB에 저장 가능|
+|Item|- 관계형 데이터베이스의 레코드와 동일한 개념<br/>- item은 독립적인 객체를 나타내며, 1개 이상 256개 이하의 Attribute를 가짐|
+|Attribute|- 관계형 데이터베이스의 칼럼과 동일한 개념이지만 사용하기 전에 미리 정의할 필요가 없음<br/>- Name, Value 쌍으로 데이터를 저장하고 저장되는 데이터의 Name은 attribute의 이름에 해당<br/>- item의 특정 Attribute(Cell)에는 여러 개의 값을 저장할 수 있음|
+    - 여러 도메인에 걸친 쿼리는 허용되지 않는다.
+    - 1:N관계의 데이터 모델을 갖는 두 개의 도메인으로부터 데이터를 조회할 경우 쿼리가 여러 번 수행돼야 하는 단점이 있다
+|구분|내용|
+|:--:|:--|
+|CreateDomain|도메인을 생성|
+|DeleteDomain|도메인을 삭제|
+|ListDomains|모든 도메인의 목록을 가져옴|
+|PutAttributes|Item을 생성하고 Attribute에 값을 추가|
+|DeleteAttributes|Attribute 값을 삭제|
+|GetAttributes|Attribute의 값을 조회|
+|Query|-쿼리를 이용하여 조건에 맞는 여러개의 item을 조회<br/>- 한 번의 쿼리는 최대 5초 이내에 수행되어야하며, 쿼리 결과로 받을 수 있는 item 수는 256개|
 #### 마. 마이크로소프트 SSDS
+    - SSDS(SQL Server Data Service)의 데이터 모델은 컨테이너, 엔티티로 구성
+|||
+|:--:|:--|
+|컨테이너|테이블과 유사한 개념이지만 하나의 컨테이너에 여러 종류의 엔티티를 저장할 수 있다|
+|엔티티|엔티티는 레코드와 유사한 개념으로 하나의 엔티티는 여러 개의 property를 가질 수 있으며, property는 name-value 쌍으로 저장|
+    - 관계형 데이터베이스에서는 엔티티를 구분하고 엔티티별로 테이블을 생성하는 것이 일반적이다. 하지만 SSDS를 이용하여 애플리케이션을 개발하면 관련된 정보를 하나의 컨테이너에 저장한다
+    - SSDS는 컨테이너의 생성/삭제, 엔티티의 생성/삭제, 조회, 쿼리 등의 API를 제공하고 SOAP/REST 기반의 프로토콜을 지원
 <hr>
 
 ## 2절. 분산 컴퓨팅 기술
