--- a/ADP_Part4/2장_데이터 처리 프로세스.md
+++ b/ADP_Part4/2장_데이터 처리 프로세스.md
@@ -281,41 +281,173 @@
 <hr>
 
 ## 2절. 분산 컴퓨팅 기술
+### 학습목표
+    - MapReduce의 개념, 특징, 실행과정을 이해한다
+    - 병렬 쿼리 시스템의 다양한 종류와 그 특징들을 이해한다
+    - SQL on Hadoop 기술과 종류를 이해한다
 ### 1. MapReduce
 #### 가. MapReduce의 개념 및 특징
+    - 분산 병렬 컴퓨팅 프레임워크
+    - 분할정복 방식으로 대용량 데이터를 병렬로 처리
+![wordcount_mapreduce_paradigm](./wordcount_mapreduce_paradigm.png)
+    - 맵리듀스에서 Client의 수행 작업 단위는 맵리듀스 잡이라고 하며, 잡은 Map Task와 Reduce Task로 나뉘어서 실행된다
+    - Map Task 하나가 1개의 블록을 대상으로 연산
 #### 나. 구글 MapReduce
 ##### 1) 구글 MapReduce의 개발 배경
+    - 연산의 병렬화, 장애 복구 등의 복잡성을 추상화시켜서 개발자들이 오직 핵심 기능 구현에만 집중할 수 있도록 하기 위해서 개발
 ##### 2) 프로그래밍 모델: Map과 Reduce라는 2개의 단계로 나눌 수 있음
+![MapReduce_concept](./MapReduce_concept.png)
+    - Map에서는 key와 value의 쌍들을 입력으로 받는다
+    - 하나의 key, value쌍은 사용자가 정의한 Map 함수를 거치면서 다수의 새로운 key, value쌍들로 변환되어 로컬 파일 시스템에 저장
+    - 저장된 임시 파일들은 프레임워크에 의해 Reduce에게 전송된다. 이 과정에서 자동으로 Shuffling과 Group by 정렬의 과정을 거친 후 Reduce의 입력 레코드로 들어가게 되는데 형식은 key와 value의 리스트다
+    - Reduce의 입력 레코드들은 사용자가 정의한 Reduce 함수를 통해 최종 Output으로 산출된다
+    - 사용자 관점에서는 이전에 언급했던 장애 복구와 같은 세세한 이슈들은 신경 쓸 필요없이 Map과 Reduce 두 함수만 작성하는 것만으로 대규모 병렬 연산 작업을 수행 할 수 있다.
 ##### 3) 실행 과정
+    - 사용자가 MapReduce 프로그램을 작성해 실행한다
+    - 마스터는 사용자의 프로그램에서 지정한 입력 데이터소스를 가지고 스케쥴링을 한다
+    - 하나의 큰 파일은 여러 개의 파일 split들로 나뉘며, 각 split들이 Map 프로세스들의 할당 단위가 된다. split수만큼 Map Task들이 워커로부터 fork됨과 동시에 실행돼 Output을 로컬 파일 시스템에 저장 한다
+    - 이 때, Output 값들은 partitioner라는 Reduce 번호를 할당해 주는 클래스를 통해 어떤 Reduce에게 보내질지 정해진다. 특별히 정해지지 않으면 Key와 해시값을 Reduce의 개수로 Modular 계산한 값이 부여되어 동일한 Key들은 같은 Reduce로 배정된다
+    - Map 단계가 끝나면 원격의 Reduce 워커들이 자기에 할당된 Map의 중간 값들을 네트워크로 가져, 사용자의 Reduce 로직을 실행해 최종 산출물을 얻어낸다.
+    - 보통 Reduce의 개수는 Map의 개수보다 적으며, 실행 흐름에서 알 수 있듯이 Map의 중간 데이터 사이즈에 따라 성능이 좌우된다
+    - MapReduce 모델 적용의 적합성
+<MapReduce 모델 적용의 적합성>
+|적합한 경우|적합하지 않은 경우|
+|:--:|:--:|
+|분산 Grep이나 빈도 수 계산 등의 작업<br/>-> Map 단계를 거치면서 데이터 사이즈가 크게 줄어들고, 줄어든 크기만큼 Reduce 오버헤드도 줄어듦에 따라 성능상 이점이 많다. |정렬과 같은 작업<br/>-> 입력 데이터의 사이즈가 줄지않고, 그대로 Reduce로 전해지므로 오버헤드에 따라 수행 성능이 저하된다.|
 ##### 4) 폴트톨러런스
+    - 각 프로세스에서는 Master에게 Task 진행 상태를 주기적으로 보낸다.
+    - 마스터는 모든 워커들의 Task 상태 정보를 가지고 있다가 특정 워커의 태스크가 더 이상 진행되지 않거나 상태 정보를 일정한 시간 동안 받지 못하면 Task에 문제가 있다고 결론을 내린다
+    - 이후 장애 복구를 해야 하는데 특정 Map이나 Reduce Task들이 죽은 경우, 해당 Task가 처리해야할 데이터 정보만 다른 워커에게 전해 주면 워커는 받은 데이터 정보를 인자로 새로운 Task를 재실행하면 된다
+    - 이처럼 MapReduce는 Shared Nothing 아키텍처이기 떄문에 간단한 메커니즘을 가진다
 #### 다. Hadoop MapReduce
 ##### 1) Haddop MapReduce의 개발 배경
 ##### 2) 아키텍처
+    - 하둡은 데몬(서버의 메인메모리 상에서 백그라운드로 수행되는 프로그램)관점에서 4개의 구성요소를 가지고 있다.
+|구분|설명|
+|:--:|:--|
+|네임노드|하둡을 이루는 가장 기본적이고 필수적인 데몬으로, 네임 스페이스를 관리하는 마스터 역할을 수행|
+|데이터노드|분산 파일 시스템의 데몬으로 파일의 실질적인 데이터 입출력에 대한 처리를 수행|
+|잡트래커|MapReduce 시스템에서 job이라는 작업을 관리하는 마스터에 해당(클러스터에 1개의 잡트래커가 존재)|
+|태스크트래커|작업을 수행하는 워커 데몬이며 슬레이브에 해당(각 노드에 1개의 태스크 트래커가 존재|
+    - 클라이언트에서 잡이라고 불리는 하둡 작업을 실행하면, 프로그램 바이너리와 입출력 디렉터리와 같은 환경 정보들이 JobTracker에게 전송된다
+    - JobTracker는 작업을 다수의 Task로 쪼갠 후, 데이터 지역성을 보장하기 위해 그 Task들을 어떤 TaskTracker에게 보낼지를 감안해 내부적으로 스케줄링해 큐(Queue)에 저장한다
+    - 이 때, Task는 맵퍼나 리듀서가 수행하는 작업 단위를 의미한다
+    - TaskTracker는 JobTracker에게 3초에 한 번씩 주기적으로 하트비트를 보내 살아 있다는 것을 알린다.
+    - TaskTracker에서 Heartbeat를 보내면 JobTracker는 먼저 해당 TaskTracker에게 할당된 Task가 있는지 큐에서 살펴본 후, Task가 있으면 하트비트의 Response 메시지에 Task 정보를 실어서 TaskTracker에게 보낸다.
+    - TaskTracker는 Response 메시지의 내용을 분석해 프로세스를 fork해 자기에게 할당된 Task를 처리한다
 ##### 3) Hadoop MapReduce의 실행절차
+![mapreduce_flow](mapreduce_flow.jpg)
+    
+    - MapReduce는 아래와 같은 단계들을 거쳐 실행된다.
+        - 1. 스플릿 : HDFS의 대용량 입력 파일을 분리하여 파일스플릿을 생성하고, FileSplit 하나당 맵 태스크 하나씩을 생성
+        - 2. 맵 : 각 Split에 대해서 레코드 단위로 map함수를 적용하여 key-value 쌍을 생성한다
+        - 3. 컴바인 : 리듀스와 동일한 프로그램을 적용하여, 리듀스단계로 데이터를 보내기 전에 중간 결과값들을 처리하여 데이터의 크기를 줄여준다
+        - 4. 파티션 : key를 기준으로 데이터를 디스크에 분할 저장하며, 각 파티션은 키를 기준으로 정렬이 수행된다. 또한 분할된 파일들은 각각 다른 리듀스 태스크에 저장된다. 
+        - 5. 셔플 : 여러 맵퍼들의 결과 파일을 각 리듀서에 할당하고, 할당된 파일을 로컬 파일 시스템으로 복사한다.
+        - 6. 정렬 : 병합 정렬방식을 이용하여 맵퍼의 결과파일을 key를 기준으로 정렬
+        - 7. 리듀스 : 정렬 단계에서 생성된 파일에 대해 리듀스 함수를 적용한다
+    - Hadoop Mapreduce 연산에서 기본적으로 Output format은 key와 value를 탭으로 구분하며, mapred.textoutputformat.separator 속성을 사용하여 구분자를 원하는 문자로 변경할 수도 있다.
+    - 맵리듀스 작업의 대표적인 예제인 WordCount의 수행과정은 다음 도표와 같다.
+
+![MapReduce-Way-MapReduce-Tutorial-Edureka](MapReduce-Way-MapReduce-Tutorial-Edureka.png)
+
 ##### 4) 하둡의 성능
+
+    - MapReuce의 sort는 MapReduce에서 어떠한 작업을 실행하더라도 Map에서 Reduce로 넘어가는 과정에서 항상 발생하는 내부적인 프로세스이다
+    - sort 작업은 데이터가 커질수록 처리 시간이 선형적으로 증가한다
+    - 클러스터 구성 서버들의 숫자를 늘림으로써 처리 시간을 줄일 수 있는 것은 아니며, 플랫폼 자체적으로 선형 확작성을 갖고 있어야 처리 시간을 줄일 수 있다.
+    - 이런 의미에서 sort는 하둡 같은 분산컴퓨팅 플랫폼의 성능과 확장성을 동시에 측정할 수 있는 좋은 실험이라고 할 수 있다. 
+
+##### 5) 하둡 사용 현황
+
+|구분|사용현황|
+|:--:|:--|
+|야후|- 활발하게 하둡을 사용하고 있는 하둡 프로젝트의 주요 후원자<br/>- 4만대 이상의 컴퓨터에서 하둡을 설치해 사용하고 있고, 가장 큰 클러스터는 약 4,500개의 노드로 구성|
+|야후의 WebMap|- 야후의 대표적인 그래프 기반 검색 엔진<br/>- 알려진 웹 페이지들의 모든 edge 및 링크 정보를 계산해 그 결과를 다양한 검색 애플리케이션에서 사용할 수 있도록 해주는 거대한 그래프<br/>- 주기적으로 100개 이상의 MapReduce 작업들을 체인 형태로 묶어 실행시키는데, 출력결과만 압축해서 300TB 이상이 나올 정도로 대용량 데이터를 다루고 있음|
+|국내|- NHN과 다음 등의 인터넷 포털에서 하둡을 사용 중<br/>- 삼성 SDS, SK 등의 IT회사에서 대용량 데이터 분석 등의 목적으로 하둡을 활용 중|
 <hr>
 
 ### 2. 병렬 쿼리 시스템
 #### 가. 병렬 쿼리 시스템의 개요
+    - 구글이나 하둡의 MapReduce는 개발자들에게 구현하려는 알고리즘에만 포커싱 할 수 있도록 간단한 프로그래밍 모델을 제공하였으나, 일부 사용자들에게는 새로운 개념이기 떄문에 여전히 쉽지 않다.
+    - 쿼리 인터페이스를 통해 병렬 처리를 할 수 있는 시스템들이 개발 됐다.
+    - 구길의 Sawzall, 야후의 Pig 등이 있으며, 사용자가 MapReduce를 쉽게 사용할 수 있도록 새로운 쿼리 언어로 추상화된 시스템들이다
 #### 나. 구글 Sawzall
+    - 구글 Sawzall는 MapReduce를 추상화한 최초의 스크립트 형태 병렬 쿼리 언어다.
+    - Pig, Hive도 Sawzall과 유사하다
 #### 다. 아파치 Pig
 ##### 1) 정의 및 특징
+    - 아파치 Pig는 야후에서 개발
 ##### 2) 개발 배경
+    - 실제 대부분의 업무는 한번의 MapReduce 작업으로 끝나지 않는 경우가 많다.
 ##### 3) 사용 예제
+    - MapReduce는 무공유 구조이기 떄문에 일반 RDB로는 쉽게 해결할 수 있는 join 연산을 매우 복잡하게 처리하므로 위 문제를 해결하기 위해 개발자는 약 400라인에 가까운 코드를 프로그래밍 해야 한다.
+    - 하지만 Pig를 이용하면 단 10라인의 코드로 간단히 해결이 가능
+##### 4) 사용 현황
 #### 라. 아파치 하이브
 ##### 1) 정의 및 특징
+    - 하이브는 페이스북에서 개발한 데이터 웨어하우징 인프라로 아파치 내의 하둡 서브 프로젝트로 등록돼 개발되고 있다.
+    - SQL 기반의 쿼리 언어와 JDBC를 지원한다
+    - Hadoop-Streaming을 쿼리 내부에 삽입해 사용할 수 있다.
+    - 아파치 하이브는 맵리듀스의 모든 기능을 지원한다
 ##### 2) 개발배경
 ##### 3) 하이브 아키텍처
+    - 하이브의 구성요소 중에서 MetaStore는 Raw File들의 콘텐츠를 일종의 테이블 내 칼럼처럼 구조화된 형태로 관리할 수 있게 해주는 스키마 저장소
+    - 별도의 DBMS를 설정하지 않으면 Embedded Derby를 기본 데이터베이스로 사용
+    - 앞 단에는 커맨드 라인 인터페이스가 있는데 사용자가는 이 CLI를 통해 Join이나 Group by 같은 SQL 쿼리를 사용
+    - 그러면 파서에서 쿼리를 받아 구문 분석을 하고, MetaStore에서 테이블과 파티션 정보를 참조해 Execution Plan을 만든다
+    - Execution Engine은 하둡의 JobTracker와 네임노드와 통신을 담당하는 창구 역할을 하면서 MapReduce 작업을 실행하고 파일을 관리한다
+    - 아래 그림 오른쪾 하단의 SerDe라는 것은 Serializer와 Deserializer의 줄임말이며, 테이블의 로우나 칼럼의 구분자 등 저장 포맷을 정의해주는 컴포넌트다. 하둡의 InputForamt과 OutputFormat에 해당한다고 볼 수 있다.
 ##### 4) 하이브의 언어 모델
+
+|DDL(Data Definition Language|DML(Data Manipulation Language|Query|
+|:--|:--|:--|
+|- 테이블 생성(Create table), 삭제(Drop Table), 변경(Rename Table) 명령<br/>- 테이블 스키마 변경(Alter Table, Add Column)<br/>- 테이블 조회(Show Table), 스키마 조회(Describe Table)|- 로컬에서 DFS로 데이터 로드(LOAD DATA)<br/>- 쿼리 결과를 테이블이나 로컬 파일시스템, DFS 저장|- Select, Group by, Sort by, Joins, Union, Sub Queries, Sampling, Transform|
+
 <hr>
 
 ### 3. SQL on 하둡
 #### 가. SQL on 하둡 개요
+    - 실시간 제약사항을 극복하기 위한 시도 중 하나
+    - 실시간 SQL 질의 분석 깃ㄹ
+    - 임팔라에 대해 학습
 #### 나. 임팔라의 개념 및 특징
+    - SQL on 하둡 기술 중 먼저 대중에게 공개된 기술
+    - 임팔라는 분석과 트랜잭션 처리를 모두 지원하는 것을 목표로 만들어진 SQL 질의 엔진
+    - 하둡과 Hbase에 저장된 데이터를 대상으로 SQL 질의를 할 수 있다.
+    - 고성능을 낼 수 있도록 C++언어를 사용, 맵리듀스를 사용하지 않고 실행 중에 최적화된 코드를 생성해 데이터를 처리
 #### 다. 임팔라의 구성요소
+|구분|설명|
+|:--:|:--|
+|클라이언트|ODBC/JDBC 클라이언트, 임팔라쉘 등에 해당하며, 임팔라에 접속해서 테이블 관리, 데이터 조회 등의 작업을 수행|
+|메타스토어|임팔라로 분석할 대상 데이터들의 정보를 관리하며, 하이브의 메타데이터를 같이 사용|
+|임팔라 데몬|시스템에서는 ImpalaD로 표시되며, 클라이언트의 SQL 질의를 받아서 데이터 파일들의 읽기/쓰기 작업을 수행한다. 임팔라 데몬은 질의 실행계획기, 질의 코디네이터, 질의 실행엔진으로 구성|
+|스테이트 스토어|임팔라 데몬들의 상태를 체크하고 건강정보를 관리해주는 데몬으로, 임팔라 데몬에 장애가 생기면 다른 데몬들에게 이 사실을 알려서 이후부터는 장애가 발생한 데몬에게는 질의 요청이 가지 않도록 한다|
+|스토리지|분석할 데이터의 저장소로 현재는 에이치베이스, 하둡 분산 파일 시스템의 두가지를 지원|
+
 #### 라. 임팔라 동작 방식
+
+![Impala](./Impala.png)
+
+    - 모든 노드에 임팔라 데몬이 구동되며, 사용자는 이 데몬들이 구동된 임의의 노드에 JDB, ODBC, 임팔라쉘을 이용하여 질의를 요청할 수 있다.
+    - 사용자의 질의는 데이터의 지역성을 고려해서 노드 전체로 분산되어 수행된다.
+    - 사용자의 질의 요청을 받은 코디네이터 데몬은 분산되어 수행된 각 임팔라 노드들의 부분 결과들을 취합한 후 결과값을 만들어서 사용자에게 제공한다.
+    - 실제 운영 환경에서는 라운드 로빈 방식으로 사용자 질의를 분산시켜서 질의에 대해 전 노드들이 코디네이터 역할을 고르게 수행할 수 있도록 해야 한다.
 #### 마. 임팔라의 SQL 구문
+    - 임팔라는 기본적으로 하이브의 SQL을 이용하지만 모든 하이브 SQL문을 지원하는 것은 아니기 때문에 어떤 구문이 지원되는지 확인할 필요가 있다.
+|항목|설명|
+|:--:|:--|
+|데이터 정의 언어(Data Definition Language)|- 데이터베이스, 테이블 생성 : Create Database/Table<br/>- 테이블 변경, 파티션 추가 : Alter Table<br/>- 데이터베이스, 테이블 삭제 : Drop Database/Table<br/>- 데이터베이스 테이블 조회 : Show Database/Table, Describe Database|
+|데이터 조작 언어(Data Manipulation Language)|- 데이터 조회 : Select, Where, GroupBy, OrderBy 구문 지원<br/>- 데이터 변경 구문은 지원 안함<br/>- 데이터 삭제(Delete)구문은 지원 안하나 테이블 삭제(Drop)시 데이터가 삭제됨|
+|내장 함수(Builtin Functions)|- 수학함수 : 절대값(abs) 반환, 코사인값 반환(acos), 로그값 반환(log)등의 기능 제공<br/>- 타입 변환 : 날짜값 반환(day), 유닉스에 포타임 변환(from_unixtime), 현재 시간 반환(now) 등 다수의 함수 제공<br/>- 조건문 : if문제공, case 등 분기 기능 제공<br/> 문자열 함수 : 아스키 코드값 변환(ascii), 문자열 병합(concat)|
+
 #### 바. 임팔라 데이터 모델
+- 임팔라는 하둡 분산 파일시스템에 데이터를 저장하며, 어떤 저장포맷을 사용하느냐에 따라 데이터 조회시 처리 성능이 달라진다
+
+|||
+|:--:|:--|
+|로우 단위로 저장|- 하둡의 기본 포맷인 텍스트나 시퀀스 파일은 로우 단위의 데이터 저장 방식을 사용한다<br/>- 테이블에서 하나의 칼럼을 읽든 전체 테이블을 읽든 동일한 디스크 입출력이 발생한다|
+|칼럼 단위로 저장|- 읽고자하는 칼럼만큼의 디스크 입출력이 발생하기 때문에 처리 성능을 개선할 수 있다. -> 물론 전체 칼럼들을 모두 조회하는 질의는 저장 포맷에 의해 성능이 영향을 받지 않는다.<br/>- 로우 단위 파일 포맷을 사용했을 떄보다 처리 시간이 작게 걸리므로 처리 시간의 측면에서 더 효율적이다<br/>- 다만 하둡에 저장된 파일이 처음부터 칼럼 파일 포맷을 사용하지 않았을 경우, 파일 포맷 변경 작업을 해주어야 한다.<br/> 칼럼 단위의 파일 저장 포맷인 RCFile을 사용할 경우, 데이터 처리 과정에서 발생하는 디스크 입출력 양을 현저하게 줄일 수 있다.|
 <hr>
 
 ## 3절. 클라우드 인프라 기술
